--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -2,7 +2,55 @@
 
 @pinColor: #ebbc18;
 
+@-moz-keyframes cardIn {
+    from {
+        opacity: 0;
+        transform: rotate(-45deg) translate(-80%,-45%);
+    }
 
+
+
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@-webkit-keyframes cardIn {
+    from {
+        opacity: 0;
+        transform: rotate(-45deg) translate(-80%,-45%);
+    }
+
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@keyframes cardIn {
+    from {
+        opacity: 0;
+        transform: rotate(-45deg) translate(-80%,-45%);
+    }
+
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+@keyframes cardOut {
+    from {
+        transform: none;
+        opacity:1;
+    }
+
+    to {
+        transform: translate(70%, 85%) rotate(45deg);
+        opacity: 0;
+    }
+}
 
 .flashcardPage {
     .fullPageElelment();
@@ -69,9 +117,11 @@
                     font-weight: bold;
                 }
 
-                .flashcard-icon {
+                md-icon {
+                    width: 48px;
+                    height: 40px;
+                    fill: @buttonColorBlue;
                     margin-right: 10px;
-                    .flashcard-icon(42px, #4190b9, #4190b9, #dadada);
                 }
             }
 
@@ -134,27 +184,18 @@
         }
 
         .card-sides button {
-            .flashcard-icon {
-                margin-right: 10px;
-            }
-
-            &:not(.active) .flashcard-icon {
-                margin-right: 10px;
-                .flashcard-icon(36px, @textColorLightGrey, @textColorLightGrey, @backgroundColor);
-            }
-
             &.active {
-                &.front .flashcard-icon {
-                    .flashcard-icon(36px, @buttonColorBlue, @headerbackground, @backgroundColor);
+                md-icon {
+                    fill: @buttonColorBlue;
                 }
+            }
 
-                &.back .flashcard-icon {
-                    .flashcard-icon(36px, @headerbackground, @buttonColorBlue, @backgroundColor);
-                }
-
-                &.both .flashcard-icon {
-                    .flashcard-icon(36px, @buttonColorBlue, @buttonColorBlue, @backgroundColor);
-                }
+            md-icon {
+                fill: @textColorLightGrey;
+                width: 40px;
+                height: 40px;
+                display: block;
+                margin-right: 10px;
             }
         }
 
@@ -232,6 +273,7 @@
         margin: 0 auto;
     }
 
+
     .card-template {
         background: @textColorWhite;
         border-radius: 10px;
@@ -243,7 +285,34 @@
         .justifyContet(center);
         flex-direction: column;
         position: relative;
-
+        /*&.ng-hide-add, &.ng-hide-remove {
+            transition: 0s linear all;
+        }*/
+        //.my-element.ng-hide-add-active,
+        &.ng-hide-add {
+            animation-name: cardOut;
+            animation-duration: 3s;
+            animation-timing-function: ease-out;
+            animation-iteration-count: 1;
+            height:400px;
+            width:800px;
+            position:absolute !important;
+            /* the transition is defined in the active class */
+        }
+        &.ng-hide-remove {
+            animation-name: cardIn;
+            animation-duration: 3s;
+            animation-timing-function: ease-out;
+            animation-iteration-count: 1;
+            height:400px;
+            width:800px;
+            position:absolute !important;
+            /* the transition is defined in the active class */
+        }
+        /*.my-element.ng-hide-add { ... }
+.my-element.ng-hide-add.ng-hide-add-active { ... }
+.my-element.ng-hide-remove { ... }
+.my-element.ng-hide-remove.ng-hide-remove-active { ... }*/
         @media(max-width:600px) {
             &.ng-hide {
                 display: block !important;
@@ -393,7 +462,7 @@
     }
 
     .card-player {
-
+        position:relative;
         .card-template {
             position: relative;
 
@@ -429,9 +498,8 @@
 
                     .side {
                         @media(min-width: 600px) {
-                            width: 50%;
+                        width: 50%;
                         }
-
                         @media(max-width: 600px) {
                             height: 50%;
                         }
@@ -554,35 +622,5 @@
 
     .md-bar {
         background-color: @textColorLightGrey;
-    }
-}
-
-.flashcard-icon(@width, @frontColor, @backColor, @borderColor) {
-    @height: 0.88*@width;
-    position: relative;
-    width: @width;
-    height: @height;
-
-    &:before, &:after {
-        content: '';
-        display: block;
-        width: 0.8*@width;
-        height: 0.72*@height;
-        border-radius: @height/6;
-        border: @height/17 solid @borderColor;
-        position: absolute;
-    }
-
-    &:before {
-        bottom: 0;
-        left: @width/4;
-        background: @backColor;
-    }
-
-    &:after {
-        transform: rotate(-20deg);
-        bottom: @height/4;
-        left: 0;
-        background: @frontColor;
     }
 }
