Fixed commit merge issues

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -43,7 +43,7 @@
 @keyframes cardOut {
     from {
         transform: none;
-        opacity:1;
+        opacity: 1;
     }
 
     to {
@@ -123,6 +123,11 @@
                     fill: @buttonColorBlue;
                     margin-right: 10px;
                 }
+
+                .flashcard-icon {
+                    margin-right: 10px;
+                    .flashcard-icon(42px, #4190b9, #4190b9, #dadada);
+                }
             }
 
             .progress-settings {
@@ -184,18 +189,39 @@
         }
 
         .card-sides button {
-            &.active {
-                md-icon {
-                    fill: @buttonColorBlue;
-                }
+            .flashcard-icon {
+                margin-right: 10px;
             }
 
-            md-icon {
-                fill: @textColorLightGrey;
-                width: 40px;
-                height: 40px;
-                display: block;
+            &:not(.active) .flashcard-icon {
                 margin-right: 10px;
+                .flashcard-icon(36px, @textColorLightGrey, @textColorLightGrey, @backgroundColor);
+            }
+
+            &.active {
+                &.front .flashcard-icon {
+                    .flashcard-icon(36px, @buttonColorBlue, @headerbackground, @backgroundColor);
+                }
+
+                &.back .flashcard-icon {
+                    .flashcard-icon(36px, @headerbackground, @buttonColorBlue, @backgroundColor);
+
+                    md-icon {
+                        fill: @buttonColorBlue;
+                    }
+                }
+
+                &.both .flashcard-icon {
+                    .flashcard-icon(36px, @buttonColorBlue, @buttonColorBlue, @backgroundColor);
+                }
+
+                md-icon {
+                    fill: @textColorLightGrey;
+                    width: 40px;
+                    height: 40px;
+                    display: block;
+                    margin-right: 10px;
+                }
             }
         }
 
@@ -294,19 +320,20 @@
             animation-duration: 3s;
             animation-timing-function: ease-out;
             animation-iteration-count: 1;
-            height:400px;
-            width:800px;
-            position:absolute !important;
+            height: 400px;
+            width: 800px;
+            position: absolute !important;
             /* the transition is defined in the active class */
         }
+
         &.ng-hide-remove {
             animation-name: cardIn;
             animation-duration: 3s;
             animation-timing-function: ease-out;
             animation-iteration-count: 1;
-            height:400px;
-            width:800px;
-            position:absolute !important;
+            height: 400px;
+            width: 800px;
+            position: absolute !important;
             /* the transition is defined in the active class */
         }
         /*.my-element.ng-hide-add { ... }
@@ -462,7 +489,8 @@
     }
 
     .card-player {
-        position:relative;
+        position: relative;
+
         .card-template {
             position: relative;
 
@@ -498,8 +526,9 @@
 
                     .side {
                         @media(min-width: 600px) {
-                        width: 50%;
+                            width: 50%;
                         }
+
                         @media(max-width: 600px) {
                             height: 50%;
                         }
@@ -622,5 +651,35 @@
 
     .md-bar {
         background-color: @textColorLightGrey;
+    }
+
+    .flashcard-icon(@width, @frontColor, @backColor, @borderColor) {
+        @height: 0.88*@width;
+        position: relative;
+        width: @width;
+        height: @height;
+
+        &:before, &:after {
+            content: '';
+            display: block;
+            width: 0.8*@width;
+            height: 0.72*@height;
+            border-radius: @height/6;
+            border: @height/17 solid @borderColor;
+            position: absolute;
+        }
+
+        &:before {
+            bottom: 0;
+            left: @width/4;
+            background: @backColor;
+        }
+
+        &:after {
+            transform: rotate(-20deg);
+            bottom: @height/4;
+            left: 0;
+            background: @frontColor;
+        }
     }
 }
