add resources to flashcard

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -63,6 +63,9 @@
 .lowercase{
     text-transform:lowercase;
 }
+.capitalize{
+    text-transform:uppercase;
+}
 button {
     border: 0;
     background: transparent;
