--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+@using Zbang.Cloudents.Mvc4WebRole.Views.Flashcard.Resources
 <ul layout="row" layout-padding layout-wrap layout-align="start stretch" class="list-unstyled quizzes-list flashcards-list">
     <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" hide-xs hide-sm class="add-button i-q-wrapper">
         @*TODO: use directive user-not-register-click - its not working somehow *@
@@ -6,7 +7,7 @@
             <div class="quizCreate">
                 <md-icon md-svg-icon="t:add"></md-icon>
                 <div class="text">
-                    Create a flashcard
+                   @FlashcardResources.FlashcardTitle 
                 </div>
             </div>
         </a>
@@ -22,7 +23,7 @@
             <md-menu-content width="1">
                 <md-menu-item ng-if="::f.canEdit(e)">
                     <md-button ui-sref="flashcardCreate({boxtype: f.params.boxtype, universityType:f.params.universityType, boxId: f.params.boxId, boxName:f.params.boxName, id:e.id})" ga-track-event="['box-flashcard', 'didEdit']">
-                        Edit
+                        @FlashcardResources.Edit
                     </md-button>
                 </md-menu-item>
                 <md-menu-item>
