--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -19,6 +19,7 @@
         transform: none;
     }
 }
+
 .cardOutAnimation() {
     from {
         transform: none;
@@ -611,6 +612,10 @@
                             height: 50%;
                         }
 
+                        .data-wrapper {
+                            flex-direction: column;
+                        }
+
                         img {
                             width: initial;
                             max-width: 100%;
@@ -631,11 +636,19 @@
                 .side {
                     width: 100%;
                     flex-grow: 1;
-                    padding: 50px;
                     .displayFlex;
                     .align-items(center);
                     .justifyContet(space-between);
                     flex-direction: column;
+
+                    .data-wrapper {
+                        padding: 50px;
+                        .displayFlex;
+                        .align-items(center);
+                        .justifyContet(space-between);
+                        flex-grow: 1;
+                        height: 100%;
+                    }
 
                     &.both {
                         border-right: 1px solid @textColorLightGrey;
