--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
 <ul layout="row" layout-padding layout-wrap layout-align="start stretch" class="list-unstyled quizzes-list">
-    <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" hide-xs hide-sm class="add-button i-q-wrapper">
+    <li flex-gt-lg="10" flex-lg="20" flex-md="25" hide-xs hide-sm class="add-button i-q-wrapper">
         @*TODO: use directive user-not-register-click - its not working somehow *@
         <a class="content" ng-click="q.createQuiz($event)" ui-sref="quizCreate({boxtype: q.params.boxtype, universityType:q.params.universityType, boxId: q.params.boxId, boxName:q.params.boxName})" ga-track-event="['box-quizzes', 'addQuiz']">
             <div class="quizCreate">
