--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -197,11 +197,14 @@ body {
     box-shadow: 0 2px 10px rgba(0,0,0,.3),0 0 1px rgba(0,0,0,.1),inset 0 1px 0 rgba(255,255,255,.25),inset 0 -1px 0 rgba(0,0,0,.15);
     padding: 0 12px;
     background: @buttonColorRed;
+    display: flex;
+    align-items: center;
+    align-content: center;
 
     md-icon {
-        width: 20px;
-        height: 20px;
-        margin: 0 auto;
+       // width: 20px;
+       // height: 20px;
+       // margin: 0 auto;
         fill: @textColorWhite;
     }
 }
