--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -112,6 +112,54 @@
                 }
             }
 
+            .add-btn {
+                display: none;
+                /*@media(min-width: 600px) {
+                        position: absolute;
+                        bottom: -16px;
+                        left: -28px;
+                    }*/
+                md-icon {
+                    width: 19px;
+                    height: 19px;
+                    /*@media(max-width: 600px) {
+                            width: 16px;
+                            height: 16px;
+                        }*/
+                }
+            }
+
+
+            .drag-btn {
+                display: none;
+                //position: absolute;
+                //left: -26px;
+                //top: ~"calc(50% - 10px)";
+                md-icon {
+                    width: 14px;
+                    height: 14px;
+                    background: @backgroundColor;
+                }
+            }
+
+            .remove-btn {
+                display: none;
+
+                md-icon {
+                    width: 15px;
+                    height: 15px;
+                }
+            }
+
+
+            @media(min-width:600px) {
+                &.focused {
+                    .drag-btn, .remove-btn, .add-btn {
+                        display: inline-block;
+                    }
+                }
+            }
+
             card-form {
                 .displayFlex;
                 /*&:focus md-icon {
@@ -126,13 +174,12 @@
 
                     @media(min-width: 600px) {
                         padding: 0 65px 0 0;
-
-                        &:focus, &.md-input-focused {
+                        /*&:focus, &.md-input-focused {
                             md-icon {
                                 display: block;
                                 outline: none;
                             }
-                        }
+                        }*/
                     }
 
                     .md-errors-spacer {
@@ -146,10 +193,19 @@
                         margin-right: 4px;
                         fill: @svgColorGrey;
                     }
-
-                    .add-image-btn:focus {
+                    /*.add-image-btn:focus {
                         display: block;
                         outline: none;
+                    }*/
+                }
+
+
+                @media(min-width:600px) {
+                    &.focused {
+                        .add-image-btn {
+                            display: block;
+                            outline: none;
+                        }
                     }
                 }
 
@@ -220,17 +276,16 @@
                 }
             }
 
+
             .card-settings {
                 position: absolute;
                 left: 0;
                 right: 0;
                 top: 1px;
                 bottom: 1px;
-
-                @media(min-width: 600px) {
+                /*@media(min-width: 600px) {
                     visibility: hidden;
-                }
-
+                }*/
                 @media(max-width: 600px) {
                     left: ~"calc(100% - 36px)";
                     right: 36px;
@@ -240,11 +295,9 @@
                 }
 
                 &.active {
-
-                    @media(min-width: 600px) {
+                    /*@media(min-width: 600px) {
                         visibility: visible;
-                    }
-
+                    }*/
                     @media(max-width: 600px) {
                         left: 0;
 
@@ -293,53 +346,11 @@
                     }
                 }
 
-                .drag-btn {
-                    position: absolute;
-                    left: -26px;
-                    top: ~"calc(50% - 10px)";
 
-                    @media(max-width: 600px) {
-                        display: none;
-                    }
 
-                    md-icon {
-                        width: 14px;
-                        height: 14px;
-                        background: @backgroundColor;
-                    }
-                }
 
-                .add-btn {
-                    @media(min-width: 600px) {
-                        position: absolute;
-                        bottom: -16px;
-                        left: -28px;
-                    }
 
-                    md-icon {
-                        width: 19px;
-                        height: 19px;
 
-                        @media(max-width: 600px) {
-                            width: 16px;
-                            height: 16px;
-                        }
-                    }
-                }
-
-                .remove-btn {
-                    @media(min-width: 600px) {
-                        position: absolute;
-                        right: -30px;
-                        top: 0;
-                        bottom: 0;
-                    }
-
-                    md-icon {
-                        width: 15px;
-                        height: 15px;
-                    }
-                }
 
                 .add-image {
                     md-icon {
