--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.rtl.css
@@ -115,6 +115,44 @@
   height: 20px;
   fill: #c3c3c3;
 }
+.flashcard .flashcard-body .card-container .add-btn {
+  display: none;
+  /*@media(min-width: 600px) {
+                        position: absolute;
+                        bottom: -16px;
+                        left: -28px;
+                    }*/
+}
+.flashcard .flashcard-body .card-container .add-btn md-icon {
+  width: 19px;
+  height: 19px;
+  /*@media(max-width: 600px) {
+                            width: 16px;
+                            height: 16px;
+                        }*/
+}
+.flashcard .flashcard-body .card-container .drag-btn {
+  display: none;
+}
+.flashcard .flashcard-body .card-container .drag-btn md-icon {
+  width: 14px;
+  height: 14px;
+  background: #dadada;
+}
+.flashcard .flashcard-body .card-container .remove-btn {
+  display: none;
+}
+.flashcard .flashcard-body .card-container .remove-btn md-icon {
+  width: 15px;
+  height: 15px;
+}
+@media (min-width: 600px) {
+  .flashcard .flashcard-body .card-container.focused .drag-btn,
+  .flashcard .flashcard-body .card-container.focused .remove-btn,
+  .flashcard .flashcard-body .card-container.focused .add-btn {
+    display: inline-block;
+  }
+}
 .flashcard .flashcard-body .card-container card-form {
   display: -webkit-flex;
   display: -ms-flex;
@@ -129,15 +167,20 @@
   padding-right: 10px;
   margin: 0;
   padding: 0 0 65px 0;
+  /*.add-image-btn:focus {
+                        display: block;
+                        outline: none;
+                    }*/
 }
 @media (min-width: 600px) {
   .flashcard .flashcard-body .card-container card-form md-input-container {
     padding: 0 0 0 65px;
-  }
-  .flashcard .flashcard-body .card-container card-form md-input-container:focus md-icon,
-  .flashcard .flashcard-body .card-container card-form md-input-container.md-input-focused md-icon {
-    display: block;
-    outline: none;
+    /*&:focus, &.md-input-focused {
+                            md-icon {
+                                display: block;
+                                outline: none;
+                            }
+                        }*/
   }
 }
 .flashcard .flashcard-body .card-container card-form md-input-container .md-errors-spacer {
@@ -150,9 +193,11 @@
   margin-left: 4px;
   fill: #484F56;
 }
-.flashcard .flashcard-body .card-container card-form md-input-container .add-image-btn:focus {
-  display: block;
-  outline: none;
+@media (min-width: 600px) {
+  .flashcard .flashcard-body .card-container card-form.focused .add-image-btn {
+    display: block;
+    outline: none;
+  }
 }
 .flashcard .flashcard-body .card-container card-form .md-resize-wrapper {
   min-height: 40px;
@@ -222,11 +267,9 @@
   left: 0;
   top: 1px;
   bottom: 1px;
-}
-@media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings {
-    visibility: hidden;
-  }
+  /*@media(min-width: 600px) {
+                    visibility: hidden;
+                }*/
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container .card-settings {
@@ -240,10 +283,10 @@
     background: #eeeeee;
   }
 }
-@media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings.active {
-    visibility: visible;
-  }
+.flashcard .flashcard-body .card-container .card-settings.active {
+  /*@media(min-width: 600px) {
+                        visibility: visible;
+                    }*/
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container .card-settings.active {
@@ -288,50 +331,6 @@
 }
 .flashcard .flashcard-body .card-container .card-settings button md-icon {
   fill: #484F56;
-}
-.flashcard .flashcard-body .card-container .card-settings .drag-btn {
-  position: absolute;
-  right: -26px;
-  top: calc(50% - 10px);
-}
-@media (max-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings .drag-btn {
-    display: none;
-  }
-}
-.flashcard .flashcard-body .card-container .card-settings .drag-btn md-icon {
-  width: 14px;
-  height: 14px;
-  background: #dadada;
-}
-@media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings .add-btn {
-    position: absolute;
-    bottom: -16px;
-    right: -28px;
-  }
-}
-.flashcard .flashcard-body .card-container .card-settings .add-btn md-icon {
-  width: 19px;
-  height: 19px;
-}
-@media (max-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings .add-btn md-icon {
-    width: 16px;
-    height: 16px;
-  }
-}
-@media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container .card-settings .remove-btn {
-    position: absolute;
-    left: -30px;
-    top: 0;
-    bottom: 0;
-  }
-}
-.flashcard .flashcard-body .card-container .card-settings .remove-btn md-icon {
-  width: 15px;
-  height: 15px;
 }
 .flashcard .flashcard-body .card-container .card-settings .add-image md-icon {
   width: 18px;
