--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
@@ -488,6 +488,12 @@
   border-radius: 10px;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
 }
+.flashcardPage .card-template.both .front {
+  border-right: 1px solid #c3c3c3;
+}
+.flashcardPage .card-template.both .data-wrapper {
+  cursor: auto;
+}
 .flashcardPage .card-template.both .side.back .pinned {
   display: none;
 }
@@ -500,9 +506,10 @@
   animation-duration: 3s;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
-  height: 400px;
-  width: 800px;
   position: absolute !important;
+  height: 400px;
+  max-width: 800px;
+  width: 100%;
   /* the transition is defined in the active class */
 }
 .flashcardPage .card-template.ng-hide-remove {
@@ -510,9 +517,10 @@
   animation-duration: 3s;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
-  height: 400px;
-  width: 800px;
   position: absolute !important;
+  height: 400px;
+  max-width: 800px;
+  width: 100%;
   /* the transition is defined in the active class */
 }
 @media (max-width: 600px) {
@@ -530,8 +538,9 @@
 .flashcardPage .back .front,
 .flashcardPage .front .back,
 .flashcardPage .back .back {
-  width: 800px;
   height: 400px;
+  max-width: 800px;
+  width: 100%;
 }
 .flashcardPage .front .flipper,
 .flashcardPage .back .flipper {
@@ -744,9 +753,6 @@
     flex-direction: column;
   }
 }
-.flashcardPage .card-player .card-template.both {
-  cursor: auto;
-}
 @media (max-width: 600px) {
   .flashcardPage .card-player .card-template.both .card-content {
     flex-direction: column;
@@ -804,13 +810,11 @@
   -webkit-justify-content: space-between;
   justify-content: space-between;
   flex-grow: 1;
+  width: 100%;
   height: 100%;
 }
-.flashcardPage .card-player .card-template .card-content .side.both {
-  border-right: 1px solid #c3c3c3;
-}
 @media (max-width: 600px) {
-  .flashcardPage .card-player .card-template .card-content .side {
+  .flashcardPage .card-player .card-template .card-content .side .data-wrapper {
     padding: 10px 50px 35px 50px;
   }
   .flashcardPage .card-player .card-template .card-content .side.front {
