--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
@@ -223,6 +223,9 @@
   top: 0;
   right: 0;
   margin: 5px;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container card-form .image-container {
@@ -238,8 +241,6 @@
   stroke: #4190b9;
 }
 .flashcard .flashcard-body .card-container card-form .image-container img {
-  max-width: 58px;
-  max-height: 58px;
   width: 100%;
   height: auto;
 }
