--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -231,6 +231,9 @@
                     top: 0;
                     right: 0;
                     margin: 5px;
+                    width: 50px;
+                    height: 50px;
+                    overflow: hidden;
 
                     @media(max-width: 600px) {
                         bottom: 0;
@@ -247,8 +250,6 @@
                     }
 
                     img {
-                        max-width: 58px;
-                        max-height: 58px;
                         width: 100%;
                         height: auto;
                     }
