--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -34,6 +34,7 @@
                     <md-icon hide-xs md-svg-icon="t:close"></md-icon>
                 </button>
                 <button type="button" class="add-btn" ng-click="f.add($index)"><md-icon md-svg-icon="t:add"></md-icon></button>
+                <input type="checkbox" id="settings-toggler{{$index}}" class="settings-toggler"/>
                 <div class="card-settings" hide-gt-xs>
                     <div class="content">
                         <button type="button" class="remove-btn desktop" ng-click="f.removeCard($index)">
@@ -44,16 +45,18 @@
                         <button type="button" class="move-down" ng-click=""></button>
                         <button type="button" class="add-btn" ng-click="f.add($index)"><md-icon md-svg-icon="t:add"></md-icon></button>
                         @*<button type="button" class="add-image">
-                            <md-icon ng-if="!slide.image" md-svg-icon="b:image-icon" plupload="upload.url"
-                                     plupload-options="upload.options(slide)"
-                                     plupload-callbacks="upload.callbacks">
-                            </md-icon>
-                        </button>*@
+                                <md-icon ng-if="!slide.image" md-svg-icon="b:image-icon" plupload="upload.url"
+                                         plupload-options="upload.options(slide)"
+                                         plupload-callbacks="upload.callbacks">
+                                </md-icon>
+                            </button>*@
                     </div>
                 </div>
-                <button type="button" class="settings-btn" card-settings="xs">
-                    <md-icon md-svg-icon="t:settingMenu"></md-icon>
-                </button>
+                <label for="settings-toggler{{$index}}">
+                    <span class="settings-btn" @*card-settings="xs"*@>
+                        <md-icon md-svg-icon="t:settingMenu"></md-icon>
+                    </span>
+                </label>
             </li>
             <li layout="row" class="add-card" ng-click="f.add()">
                 <div flex="50" flex-xs="100">
